Adicionada página de mensagem e link para esta página

--- a/mensagem.html
+++ b/mensagem.html
@@ -6,7 +6,7 @@
     <title>Primeiro projeto no Github</title>
 </head>
 <body>
-    <h1>Página Inicial</h1>
-    <a href="mensagem.html">Ir para a página de mensagem</a>
+    <h1>Mensagem</h1>
+    <p>Obrigado por vir aqui!</p>
 </body>
 </html>
