Adicionando link para voltar para a página inicial

--- a/mensagem.html
+++ b/mensagem.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Mensagem</h1>
     <p>Obrigado por vir aqui!</p>
+    <a href="index.html">Voltar para a página inicial</a>
 </body>
 </html>
